# Aeternus-Browse_with_Intelligence

./: .env  README.md  main.py  pyproject.toml  refactor_aeternus.py  uuid_extensions.py
aeternus/: __init__.py  cli.py  config.py  init_cmd.py  logging_config.py  utils.py
aeternus/actor/: element.py  mouse.py  page.py
aeternus/agent/: gif.py  intent.py  judge.py  prompts.py  service.py  variable_detector.py  views.py
aeternus/browser/: __init__.py  demo_mode.py  events.py  profile.py  python_highlights.py  session.py  session_manager.py  video_recorder.py  views.py  watchdog_base.py
aeternus/code_use/: __init__.py  formatting.py  namespace.py  notebook_export.py  service.py  views.py
aeternus/controller/: __init__.py
aeternus/dom/: enhanced_snapshot.py  markdown_extractor.py  service.py  views.py
aeternus/knowledge/: __init__.py  embeddings.py  ingestion.py
aeternus/llm/: __init__.py  base.py  models.py
aeternus/mcp/: __init__.py  __main__.py  client.py  controller.py  server.py
aeternus/sandbox/: __init__.py  sandbox.py
aeternus/screenshots/: service.py
aeternus/skills/: __init__.py  service.py  utils.py  views.py
aeternus/sync/: __init__.py  auth.py  service.py
aeternus/telemetry/: __init__.py  service.py  views.py
aeternus/tokens/: service.py  views.py
aeternus/tools/: service.py  utils.py
aeternus/verification/: __init__.py  service.py
aeternus_app/: index.html  package-lock.json  package.json
aeternus_app/dist-electron/: ._preload.js  main.js  preload.js
aeternus_app/electron/: main.ts  preload.ts  (+1 more)
backend/: server.py
(+74 files in other folders)
